[package]
name = "policy-factory"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]

// patch: 2026-05-30T11:15:00

// patch: 2026-06-02T06:45:00

// patch: 2026-06-05T02:15:00
