[package]
name = "risk-pool"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]

// patch: 2026-05-27T15:45:00

// patch: 2026-06-02T23:37:30

// patch: 2026-06-07T21:45:00

// patch: 2026-06-08T14:37:30

// patch: 2026-06-14T05:37:30

// patch: 2026-07-01T02:37:30
